chore: .gitignore for build

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,30 @@
 src/SketchSolver/InputParser.*
 src/SketchSolver/InputLexer.*
+
+*~
+
+autom4te.cache/
+aclocal.m4
+m4/
+compile
+config.guess
+config.h
+config.h.in
+config.log
+config.status
+config.sub
+configure
+depcomp
+INSTALL
+install-sh
+libtool
+ltmain.sh
+Makefile
+Makefile.in
+missing
+stamp-h1
+
+.deps/
+*.a
+*.o
+src/SketchSolver/cegis
